2010-08-31  Zoltan Horvath  <zoltan@webkit.org>

        Build fix after r66448 on WebKit2.

        [Qt] qt_wk_didFinishDocumentLoadForFrame needs to be implemented 
        https://bugs.webkit.org/show_bug.cgi?id=44934

        * UIProcess/API/qt/ClientImpl.cpp:
        (qt_wk_didFinishDocumentLoadForFrame):
        * UIProcess/API/qt/ClientImpl.h:

2010-08-30  Alice Liu  <alice.liu@apple.com>

        Reviewed by Darin Adler.

        Add missing parts of didFinishDocumentLoadForFrame
        https://bugs.webkit.org/show_bug.cgi?id=44913

        * Shared/CoreIPCSupport/WebPageProxyMessageKinds.h: Added new kind
        * UIProcess/API/C/WKPage.h:
        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::QWKPage): Updated struct
        * UIProcess/WebLoaderClient.cpp:
        (WebKit::WebLoaderClient::didFinishDocumentLoadForFrame): Added
        * UIProcess/WebLoaderClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didReceiveMessage): Added case for WebPageProxyMessage::DidFinishDocumentLoadForFrame
        (WebKit::WebPageProxy::didFinishDocumentLoadForFrame): Added
        * UIProcess/WebPageProxy.h:

        Just rearranging existing code in these:
        * WebProcess/InjectedBundle/API/c/WKBundlePage.h:
        * WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.cpp:
        (WebKit::InjectedBundlePageLoaderClient::didFinishDocumentLoadForFrame):
        * WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.h:

2010-08-30  Sam Weinig  <sam@webkit.org>

        Try and fix the WebKit2 buildbot.

        * WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
        (InitWebCoreSystemInterface): Add missing initialization of QTMovieDisableComponent.

2010-08-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add URLRequest API for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=44910

        Add WebURLRequest class and WKURLRequestRef C API to go with it. Right now,